# niffler

./: .env.template  .gitignore  Dockerfile  README.md  compose.dev.yml  compose.prod.yml  compose.yml  docker-compose.yml  package.json  pnpm-lock.yaml  pymon.py  pyproject.toml  reloadable.py
mongo/data/: WiredTiger.turtle  WiredTiger.wt  _mdb_catalog.wt  collection-0-6306243570213886611.wt  collection-2-6306243570213886611.wt  collection-4-6306243570213886611.wt  index-1-6306243570213886611.wt  index-3-6306243570213886611.wt  index-5-6306243570213886611.wt  index-6-6306243570213886611.wt  sizeStorer.wt
mongo/data/diagnostic.data/: metrics.2025-03-05T09-31-54Z-00000
src/: app.ts  fastify.d.ts  index.ts  router.ts
src/controller/: index.ctrl.ts  x.ctrl.ts
src/niffler/: __main__.py  api.py  bot.py  brain.py  coin.py  config.py  main.py  twitter.py  typedefs.py  types.py  web_capturer.py  ztf.py
src/niffler/config/: db.py  scheduler.py  settings.py
src/niffler/db/: __init__.py
src/niffler/handlers/: start.py  start_handler.py
src/niffler/integrations/: coin.py  telegram_bot.py  x_capturer.py
src/niffler/integrations/llm/models/: deepseek.py  grok.py  kimi.py
src/niffler/integrations/llm/prompts/: kimi.py
src/niffler/llm/: message.py
src/niffler/llm/models/: grok.py  kimi.py  xai.py
src/niffler/models/: __init__.py  coin.py  crypto_token.py  user.py
src/niffler/routers/: coin.py  crypto_token.py  user.py
src/niffler/schemas/: coin.py  crypto_token.py  user.py
src/niffler/services/: coin.py  crypto_token.py  user.py
src/niffler/tasks/: base.py  coin.py  coin_hunter.py  dexscreener_hunter.py  x.py  x_capturer.py
src/niffler/utils/: logger.py
src/plugins/: env.ts
