[project]
name = "niffler"
version = "0.1.0"
description = "✨ Niffler is Chasing the Shiny Meme Coins."
authors = [{ name = "binghuis", email = "soongbinghui@gmail.com" }]
dependencies = [
    "fastapi>=0.115.6",
    "uvicorn[standard]>=0.32.1",
]
requires-python = ">=3.13"
readme = "README.md"
license = { text = "MIT" }

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true

[tool.pdm.scripts]
dev = "uvicorn src.niffler.main:app --reload"