[project]
name = "niffler"
version = "0.1.0"
description = "✨ Niffler is Chasing the Shiny Meme Coins."
authors = [{ name = "binghuis", email = "soongbinghui@gmail.com" }]
dependencies = [
    "uvicorn[standard]>=0.32.1",
    "python-dotenv>=1.0.1",
    "pydantic-settings>=2.6.1",
    "python-telegram-bot>=21.9",
    "httpx>=0.28.1",
    "tweepy>=4.15.0",
    "openai>=1.64.0",
    "motor>=3.7.0",
    "beanie>=1.29.0",
    "selenium>=4.29.0",
    "fastapi>=0.115.11",
    "apscheduler>=3.11.0",
    "pymongo>=4.11.3",
    "loguru>=0.7.3",
]
requires-python = ">=3.13"
readme = "README.md"
license = { text = "MIT" }

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm]
distribution = true

[tool.pdm.scripts]
dev = "docker-compose -f compose.yml -f compose.dev.yml up --build"
stage = "docker-compose -f compose.yml -f compose.prod.yml up --build"
prod = "docker-compose -f compose.yml -f compose.prod.yml up --build -d"

[dependency-groups]
dev = [
]
